--- a/_posts/0000-01-02-aamrdit.md
+++ b/_posts/0000-01-02-aamrdit.md
@@ -2,5 +2,7 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
+Changes are pushing to git hub
 Use the left arrow to go back!
+
+New change added today 17 June
