Update to slide

--- a/_posts/0000-01-02-aamrdit.md
+++ b/_posts/0000-01-02-aamrdit.md
@@ -1,8 +1,12 @@
 ---
 layout: slide
-title: "Welcome to our second slide!"
+title: "Welcome to our github second slide!"
+
+This is my awesome slide
 ---
-Changes are pushing to git hub
+Changes are Pushing to git hub
 Use the left arrow to go back!
 
 New change added today 17 June
+
+One more on 18 June
