--- a/_posts/0000-01-02-aamrdit.md
+++ b/_posts/0000-01-02-aamrdit.md
@@ -1,10 +1,10 @@
 ---
 layout: slide
-title: "Welcome to our github second slide!"
+title: "Welcome to our Github second slide!"
 
 This is my awesome slide
 ---
-Changes are Pushing to git hub
+Changes are Pushing to git hub :-)
 Use the left arrow to go back!
 
 New change added today 17 June
